RESOLVED FIXED278981
[Flex] Hittest fails to find legend when fieldset is a flex box
https://bugs.webkit.org/show_bug.cgi?id=278981
Summary [Flex] Hittest fails to find legend when fieldset is a flex box
alan
Reported 2024-09-01 05:52:00 PDT
Attachments
Patch (3.80 KB, patch)
2024-09-01 05:57 PDT, alan
no flags
[fast-cq]Patch (3.21 KB, patch)
2024-09-01 07:52 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2024-09-01 05:57:50 PDT
alan
Comment 2 2024-09-01 07:52:34 PDT
Created attachment 472389 [details] [fast-cq]Patch
EWS
Comment 3 2024-09-01 09:22:08 PDT
Committed 283039@main (00489fb244e1): <https://commits.webkit.org/283039@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472389 [details].
Note You need to log in before you can comment on or make changes to this bug.