[Flex] Hittest fails to find legend when fieldset is a flex box https://bugs.webkit.org/show_bug.cgi?id=278981 <rdar://134975207>

Reviewed by Antti Koivisto.

Excluded children (e.g. <legend>) are not supposed to be excluded from hittest.
("isExcludedFromNormalLayout" as its name implies should only be excluded from (inflow) layout. This also matches BFC.)

* LayoutTests/fast/flexbox/hittest-fieldset-as-flex-container-expected.txt: Added.
* LayoutTests/fast/flexbox/hittest-fieldset-as-flex-container.html: Added.
* Source/WebCore/rendering/RenderFlexibleBox.cpp: Include children with isExcludedFromNormalLayout bit set (shouldSkipChild skips both out of flow and excluded flex items)
(WebCore::RenderFlexibleBox::hitTestChildren):

Canonical link: https://commits.webkit.org/283039@main